Update ArchLinux to latest.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@ Thank you to the following for hardware donations.
         <thead>
             <tr>
                 <th>Format</th>
-                <th class="cpu-arch">i686 CPU</th>
-                <th class="cpu-arch">x86-64 CPU</th>
                 <th class="cpu-arch">Dual Architecture</th>
                 <th>Description</th>
             </tr>
@@ -60,32 +58,12 @@ Thank you to the following for hardware donations.
             <tr>
                 <td>
                     Netinstall Image
-                </td><td class="cpu-arch">
-                    <a href="./linux/archlinux/iso/2011.08.19/archlinux-2011.08.19-netinstall-i686.iso" 
-                        title="Download for i686 architecture">Download</a>
-                </td><td class="cpu-arch">
-                    <a href="./linux/archlinux/iso/2011.08.19/archlinux-2011.08.19-netinstall-x86_64.iso" 
-                    title="Download for x86-64 architecture">Download</a>
-                </td><td class="cpu-arch">
-                    <a href="./linux/archlinux/iso/2011.08.19/archlinux-2011.08.19-netinstall-dual.iso" 
+                </td>
+                <td class="cpu-arch">
+                    <a href="./linux/archlinux/iso/2012.07.15/archlinux-2012.07.15-netinstall-dual.iso" 
                     title="Download for both architectures">Download</a>
                 </td><td class="wrap">
                     Downloads and installs packages versions via FTP for absolute freshness.
-                </td>
-            </tr><tr>
-                <td>
-                    Core Image
-                </td><td class="cpu-arch">
-                    <a href="./linux/archlinux/iso/2011.08.19/archlinux-2011.08.19-core-i686.iso.torrent" 
-                    title="Download for i686 architecture">Download</a>
-                </td><td class="cpu-arch">
-                    <a href="./linux/archlinux/iso/2011.08.19/archlinux-2011.08.19-core-x86_64.iso.torrent" 
-                    title="Download for x86-64 architecture">Download</a>
-                </td><td class="cpu-arch">
-                    <a href="./linux/archlinux/iso/2011.08.19/archlinux-2011.08.19-core-dual.iso.torrent" 
-                    title="Download for both architectures">Download</a>
-                </td><td class="wrap">
-                    Core packages are included on the media. Good for basic off-line installation.
                 </td>
             </tr>
         </tbody>
