Add more details to Fedora

--- a/index.html
+++ b/index.html
@@ -85,6 +85,28 @@ Thank you to the following for hardware donations.
 
 <a name="fedora">
 <h3>Fedora</h3>
+<table>
+   <thead>
+      <tr>
+         <th>Format</th>
+         <th class="cpu-arch">x86_64</th>
+         <th>Description</th>
+      </tr>
+   </thead>
+   <tbody>
+      <tr>
+         <td>
+            DVD Image
+         </td>
+         <td class="cpu-arch">
+            <a href="./linux/fedora/releases/17/Fedora/x86_64/iso/Fedora-17-x86_64-DVD.iso">Download</a>
+         </td><td class="wrap">
+            DVD install image.
+         </td>
+      </tr>
+   </tbody>
+</table>
+
 <br><a href="./linux/fedora/">linux/fedora</a> - Raw directory contents
 
 <a name="knoppix">
