Add i386 to Fedora.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ Thank you to the following for hardware donations.
    <thead>
       <tr>
          <th>Format</th>
+         <th class="cpu-arch">i386</th>
          <th class="cpu-arch">x86_64</th>
          <th>Description</th>
       </tr>
@@ -98,9 +99,9 @@ Thank you to the following for hardware donations.
          <td>
             DVD Image
          </td>
-         <td class="cpu-arch">
-            <a href="./linux/fedora/releases/17/Fedora/x86_64/iso/Fedora-17-x86_64-DVD.iso">Download</a>
-         </td><td class="wrap">
+         <td class="cpu-arch"><a href="./linux/fedora/releases/17/Fedora/i386/iso/Fedora-17-i386-DVD.iso">Download</a></td>
+         <td class="cpu-arch"><a href="./linux/fedora/releases/17/Fedora/x86_64/iso/Fedora-17-x86_64-DVD.iso">Download</a></td>
+         <td class="wrap">
             DVD install image.
          </td>
       </tr>
