Add Fedora NetInstall.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@ Thank you to the following for hardware donations.
                 <td>
                     Netinstall Image
                 </td>
-                <td class="cpu-arch">
-                    <a href="./linux/archlinux/iso/2012.07.15/archlinux-2012.07.15-netinstall-dual.iso" 
-                    title="Download for both architectures">Download</a>
-                </td><td class="wrap">
+                <td class="cpu-arch"><a href="./linux/archlinux/iso/2012.07.15/archlinux-2012.07.15-netinstall-dual.iso" title="Download for both architectures">Download</a></td><td class="wrap">
                     Downloads and installs packages versions via FTP for absolute freshness.
                 </td>
             </tr>
@@ -96,14 +93,16 @@ Thank you to the following for hardware donations.
    </thead>
    <tbody>
       <tr>
-         <td>
-            DVD Image
-         </td>
+         <td>DVD Image</td>
          <td class="cpu-arch"><a href="./linux/fedora/releases/17/Fedora/i386/iso/Fedora-17-i386-DVD.iso">Download</a></td>
          <td class="cpu-arch"><a href="./linux/fedora/releases/17/Fedora/x86_64/iso/Fedora-17-x86_64-DVD.iso">Download</a></td>
-         <td class="wrap">
-            DVD install image.
-         </td>
+         <td class="wrap">DVD install image.</td>
+      </tr>
+      <tr>
+         <td>NetInstall Image</td>
+         <td class="cpu-arch"><a href="./linux/fedora/releases/17/Fedora/i386/iso/Fedora-17-i386-netinst.iso">Download</a></td>
+         <td class="cpu-arch"><a href="./linux/fedora/releases/17/Fedora/x86_64/iso/Fedora-17-x86_64-netinst.iso">Download</a></td>
+         <td class="wrap">Net install image.</td>
       </tr>
    </tbody>
 </table>
