Add Fork me on GitHub banner. Update Arch Linux direct ISO link. Add CentOS ISO links.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <font face="HelveticaNeue, Helvetica Neue, Helvetica, Arial, sans-serif" />
 <body>
-
+<a href="https://github.com/jyap808/mirror.ancl.hawaii.edu_website"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 <h2>Donations</h2>
 
 Thank you to the following for hardware donations.
@@ -59,7 +59,7 @@ Thank you to the following for hardware donations.
                 <td>
                     Netinstall Image
                 </td>
-                <td class="cpu-arch"><a href="./linux/archlinux/iso/2012.07.15/archlinux-2012.07.15-netinstall-dual.iso" title="Download for both architectures">Download</a></td><td class="wrap">
+                <td class="cpu-arch"><a href="./linux/archlinux/iso/2012.08.04/archlinux-2012.08.04-dual.iso" title="Download for both architectures">Download</a></td><td class="wrap">
                     Downloads and installs packages versions via FTP for absolute freshness.
                 </td>
             </tr>
@@ -69,6 +69,42 @@ Thank you to the following for hardware donations.
 
 <a name="centos">
 <h3>CentOS</h3>
+<table>
+   <thead>
+      <tr>
+         <th>Format</th>
+         <th class="cpu-arch">i386</th>
+         <th class="cpu-arch">x86_64</th>
+         <th>Description</th>
+      </tr>
+   </thead>
+   <tbody>
+      <tr>
+         <td>DVD 1</td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/i386/CentOS-6.3-i386-bin-DVD1.iso">Download</a></td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/x86_64/CentOS-6.3-x86_64-bin-DVD1.iso">Download</a></td>
+         <td class="wrap">DVD 1 install image.</td>
+      </tr>
+      <tr>
+         <td>DVD 2</td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/i386/CentOS-6.3-i386-bin-DVD2.iso">Download</a></td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/x86_64/CentOS-6.3-x86_64-bin-DVD2.iso">Download</a></td>
+         <td class="wrap">DVD 2 install image.</td>
+      </tr>
+      <tr>
+         <td>Minimal</td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/i386/CentOS-6.3-i386-minimal.iso">Download</a></td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/x86_64/CentOS-6.3-x86_64-minimal.iso">Download</a></td>
+         <td class="wrap">DVD 1 install image.</td>
+      </tr>
+      <tr>
+         <td>NetInstall Image</td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/i386/CentOS-6.3-i386-netinstall.iso">Download</a></td>
+         <td class="cpu-arch"><a href="./linux/centos/6.3/isos/x86_64/CentOS-6.3-x86_64-netinstall.iso">Download</a></td>
+         <td class="wrap">Net install image.</td>
+      </tr>
+   </tbody>
+</table>
 <br><a href="./linux/centos/">linux/centos</a> - Raw directory contents
 
 <a name="debian">
