--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@ Thank you to the following for hardware donations.
 <h3>LibreOffice</h3>
 <br><a href="./pub/tdf/libreoffice/">pub/tdf/libreoffice</a> - Raw directory contents
 
+<a name="pfSense">
+<h3>LibreOffice</h3>
+<br><a href="./pub/tdf/pfsense/">pub/tdf/pfsense</a> - Raw directory contents
+
 </body>
 </html>
-
