fixed typo in pfSense header

--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@ Thank you to the following for hardware donations.
 <br><a href="./pub/tdf/libreoffice/">pub/tdf/libreoffice</a> - Raw directory contents
 
 <a name="pfSense">
-<h3>LibreOffice</h3>
+<h3>pfSense</h3>
 <br><a href="./pub/tdf/pfsense/">pub/tdf/pfsense</a> - Raw directory contents
 
 </body>
 </html>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																							
