fixed another pfSense typo

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ Thank you to the following for hardware donations.
 <li><a href="#NetBSD">NetBSD</a></li>
 <li><a href="#OpenBSD">OpenBSD</a></li>
 <li><a href="#libreoffice">LibreOffice</a></li>
+<li><a href="#pfSense">pfSense</a></li>
 </ul>
 
 <hr>
@@ -184,7 +185,7 @@ Thank you to the following for hardware donations.
 
 <a name="pfSense">
 <h3>pfSense</h3>
-<br><a href="./pub/tdf/pfsense/">pub/tdf/pfsense</a> - Raw directory contents
+<br><a href="./pub/pfSense/downloads/">pub/pfSense/downloads</a> - Raw directory contents
 
 </body>
 </html>
