--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ for people in Hawaii. This mirror (as of 2013) has the largest total hard drive 
                 <td>
                     Netinstall Image
                 </td>
-                <td class="cpu-arch"><a href="./linux/archlinux/iso/2015.04.01/archlinux-2015.04.01-dual.iso"
+                <td class="cpu-arch"><a href="./linux/archlinux/iso/latest/archlinux-2016.05.01-dual.iso"
                     title="Download for both architectures"><i class="icon-download"></i> Download</a></td>
             </tr>
         </tbody>
@@ -115,11 +115,11 @@ for people in Hawaii. This mirror (as of 2013) has the largest total hard drive 
    <tbody>
       <tr>
          <td>DVD</td>
-         <td class="cpu-arch"><a href="./linux/centos/7/isos/x86_64/CentOS-7-x86_64-DVD-1503-01.iso"><i class="icon-download"></i> Download</a></td>
+         <td class="cpu-arch"><a href="./linux/centos/7/isos/x86_64/CentOS-7-x86_64-DVD-1511.iso"><i class="icon-download"></i> Download</a></td>
       </tr>
       <tr>
          <td>NetInstall Image</td>
-         <td class="cpu-arch"><a href="./linux/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso"><i class="icon-download"></i> Download</a></td>
+         <td class="cpu-arch"><a href="./linux/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1511.iso"><i class="icon-download"></i> Download</a></td>
       </tr>
    </tbody>
 </table>
